--- a/birthday/index.html
+++ b/birthday/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/dragon_logo_xsmall.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday Wesley!</title>
+    <title>Happy Birthday!</title>
   </head>
   <body>
     <div id="root"></div>
